--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 ./HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/shivacharanreddy.xcuserdatad/UserInterfaceState.xcuserstate
 ./.DS_Store
+/.DS_Store
