--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-./HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/shivacharanreddy.xcuserdatad/UserInterfaceState.xcuserstate
-./.DS_Store
+/HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/shivacharanreddy.xcuserdatad/UserInterfaceState.xcuserstate
+/HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/aryansingh.xcuserdatad/UserInterfaceState.xcuserstate
+/.DS_Store
