--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/shivacharanreddy.xcuserdatad/UserInterfaceState.xcuserstate
 /HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/aryansingh.xcuserdatad/UserInterfaceState.xcuserstate
 /.DS_Store
+RecoveredReferences/
