--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/shivacharanreddy.xcuserdatad/UserInterfaceState.xcuserstate
 /HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/aryansingh.xcuserdatad/UserInterfaceState.xcuserstate
+/HMS-Team3-SwiftApp.xcodeproj/project.xcworkspace/xcuserdata/niyashameer.xcuserdatad/UserInterfaceState.xcuserstate
 /.DS_Store
 RecoveredReferences/
